--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,13 +1,11 @@
 <form>
-    <p>
-        <label for="title">Title:</label>
+    <app-control label="Title">
         <input type="text" id="title" name="title">
-    </p>
-    <p>
-        <label for="request">Request:</label>
+    </app-control>
+    <app-control label="Request">
         <textarea type="text" id="request" name="request" rows="3">
         </textarea>
-    </p>
+    </app-control>
     <button appButton type="submit">
         Submit
         <span ngProjectAs="icon">
