--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,6 +1,6 @@
-<form (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onSubmit(titleElement)">
     <app-control label="Title">
-        <input type="text" id="title" name="title">
+        <input type="text" id="title" name="title" #titleElement />
     </app-control>
     <app-control label="Request">
         <textarea type="text" id="request" name="request" rows="3">
