--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,9 @@
 <form (ngSubmit)="onSubmit(titleInput.value, textInput.value)" #form>
     <app-control label="Title">
-        <input type="text" id="title" name="title" #titleInput />
+        <input type="text" id="title" name="title" #titleInput #input />
     </app-control>
     <app-control label="Request">
-        <textarea type="text" id="request" name="request" rows="3" #textInput>
+        <textarea type="text" id="request" name="request" rows="3" #textInput #input>
         </textarea>
     </app-control>
     <button appButton type="submit">
